split reports by core project

--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -2,21 +2,27 @@
   --theme: #0078c2;
   --theme-dark: #162f3f;
 
+  --dark-gray: #334155;
+  --gray: #64748b;
+  --light-gray: #e2e8f0;
+
+  --content: 1200px;
+
   --regular: 400;
   --bold: 600;
 
-  --shadow: 0 0 5px -2px #00000020, 1px 3px 10px -2px #00000020;
+  --shadow: 0 0 5px -2px #00000020, 1px 3px 10px -2px #33415520;
+  --rounded: 5px;
+  --fast: 0.1s ease-in-out;
 }
 
 * {
   font-family: "Open Sans", sans-serif;
-  transition-duration: 0.1s;
-  transition-timing-function: ease-in-out;
 }
 
 body {
   margin: 0;
-  line-height: 2;
+  line-height: 1.5;
 }
 
 #app {
@@ -27,7 +33,14 @@ body {
 
 main {
   flex-grow: 1;
-  padding: 40px;
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 40px max(40px, (100% - var(--content)) / 2);
+  gap: 40px;
 }
 
 h1,
@@ -50,9 +63,50 @@ a {
   gap: 5px;
   background: transparent;
   color: var(--theme);
+  transition: var(--fast);
   transition-property: color, background;
 }
 
 a:hover {
   background: #80808080;
+}
+
+.table-wrapper {
+  max-width: 100%;
+  overflow-x: auto;
+  border-radius: var(--rounded);
+  box-shadow: var(--shadow);
+}
+
+@media print {
+  .table-wrapper {
+    display: contents;
+  }
+
+  table {
+    width: 100%;
+  }
+}
+
+table {
+  border-collapse: collapse;
+  overflow-wrap: break-word;
+}
+
+th {
+  font-weight: var(--bold);
+}
+
+th {
+  background: var(--light-gray);
+}
+
+th,
+td {
+  padding: 10px 20px;
+  text-align: left;
+}
+
+tbody tr {
+  border-bottom: solid 1px var(--light-gray);
 }
