--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -1,17 +1,15 @@
 :root {
-  --hue: 200;
-  --theme: hsl(var(--hue), 100%, 32%);
+  /** https://tailwindcss.com/docs/colors */
+  --theme: #0284c7;
+  --theme-light: #e0f2fe;
 
-  --sat: 20%;
-  --off-black: hsl(var(--hue), var(--sat), 10%);
-  --dark-gray: hsl(var(--hue), var(--sat), 40%);
-  --gray: hsl(var(--hue), var(--sat), 60%);
-  --light-gray: hsl(var(--hue), var(--sat), 80%);
-  --off-white: hsl(var(--hue), var(--sat), 90%);
+  --dark-gray: #64748b;
+  --light-gray: #e2e8f0;
+  --off-white: #f8fafc;
 
-  --success: #22c55e;
+  --success: #10b981;
   --warning: #f59e0b;
-  --error: #f43f5e;
+  --error: #ef4444;
 
   --content: 1200px;
   --full: calc(100vw - 100px);
@@ -21,7 +19,7 @@
   --regular: 400;
   --bold: 600;
 
-  --shadow: 0 0 5px -2px #00000020, 1px 3px 10px -2px #33415520;
+  --shadow: 0 0 2px 0 #00000020, 1px 3px 10px -2px #00000020;
   --rounded: 5px;
   --fast: 0.1s ease-in-out;
 
@@ -63,7 +61,6 @@ main {
 section {
   display: flex;
   flex-direction: column;
-  /* align-items: flex-start; */
   align-items: center;
   padding: 40px max(40px, (100% - var(--content)) / 2);
   gap: 40px;
@@ -78,7 +75,7 @@ section.narrow {
 }
 
 section:nth-child(odd) {
-  background: #f8f8f8;
+  background: var(--off-white);
 }
 
 section:last-child {
@@ -111,19 +108,15 @@ h2 {
 }
 
 h3 {
+  justify-content: flex-start;
   font-size: 1.2rem;
+  text-align: left;
 }
 
 h4 {
+  justify-content: flex-start;
   font-size: 1rem;
-}
-
-:is(h3)::before,
-:is(h3)::after {
-  flex-grow: 1;
-  height: 2px;
-  background: var(--off-white);
-  content: "";
+  text-align: left;
 }
 
 :is(h1, h2, h3, h4) > svg {
@@ -137,7 +130,7 @@ hr {
   width: 100%;
   height: 2px;
   border: none;
-  background: var(--off-white);
+  background: var(--light-gray);
 }
 
 /* formatting */
@@ -174,7 +167,7 @@ p {
 code {
   padding: 0 0.2em;
   border-radius: var(--rounded);
-  background: var(--off-white);
+  background: var(--light-gray);
   font-family: var(--mono);
 }
 
@@ -210,11 +203,12 @@ button {
 
 table {
   border-collapse: collapse;
+  background: var(--white);
   overflow-wrap: break-word;
 }
 
 tr {
-  border-bottom: solid 1px var(--off-white);
+  border-bottom: solid 1px var(--light-gray);
 }
 
 th {
@@ -227,10 +221,28 @@ td {
   padding: 0;
 }
 
+/** list */
+
+ul,
+ol {
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+  gap: 5px;
+}
+
 /** util */
 
 .center {
   text-align: center;
+}
+
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 /** definitions */
@@ -247,57 +259,53 @@ dd {
   margin: 0;
 }
 
-/* auto cols layout */
+/** col layout */
 
-.details {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(100px, auto));
-  place-content: center;
-  max-width: 100%;
-  gap: 20px 30px;
-  text-align: left;
+.col {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  gap: 10px;
 }
 
-.details > * > :first-child {
+/* auto two-col layout */
+
+.mini-table {
+  display: grid;
+  grid-template-columns: minmax(auto, max-content) auto;
+  align-items: center;
+  width: 100%;
+  gap: 5px 20px;
+}
+
+.mini-table > :nth-child(odd) {
   color: var(--dark-gray);
-  font-weight: var(--bold);
+}
+
+/* info cards */
+
+.details {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  max-width: 100%;
+  gap: 20px;
+  text-align: left;
 }
 
 .details > * {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-}
-
-/** list of notes layout */
-
-.notes {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+  max-width: 300px;
+  padding: 10px;
   gap: 5px;
+  border-radius: var(--rounded);
+  box-shadow: var(--shadow);
 }
 
-.notes > :first-child {
+.details > * > :first-child {
   color: var(--dark-gray);
   font-weight: var(--bold);
-  /* margin-bottom: 5px; */
-  font-size: 1.2rem;
-}
-
-/* definitions table layout */
-
-.definitions {
-  display: grid;
-  grid-template-columns: max-content auto;
-  align-items: center;
-  width: 100%;
-  margin: 10px 0;
-  gap: 10px 20px;
-}
-
-.definitions > :nth-child(odd) {
-  color: var(--dark-gray);
 }
 
 /* chart layout */
@@ -318,49 +326,11 @@ dd {
   max-width: calc(var(--content) / 2);
 }
 
-/** gradients to indicate scrollability */
-
-.scrollable-left::before,
-.scrollable-right::after {
-  --fade: 30px;
-  display: block;
-  position: sticky;
-  width: var(--fade);
-  height: 9999px;
-  margin-top: -9999px;
-  margin-left: -var(--fade);
-  inset: 0;
-  content: "";
-}
-
-@media print {
-  .scrollable-left::before,
-  .scrollable-right::after {
-    display: none;
-  }
-}
-
-.scrollable-left::before {
-  background: linear-gradient(
-    to right,
-    var(--off-white) 0,
-    transparent var(--fade)
-  );
-}
-
-.scrollable-right::after {
-  left: calc(100% - var(--fade));
-  background: linear-gradient(
-    to left,
-    var(--off-white) 0,
-    transparent var(--fade)
-  );
-}
-
 /** vue e-charts */
 
 .echarts {
   overflow: hidden;
+  border-radius: var(--rounded);
   box-shadow: var(--shadow);
 }
 
